# SingleCellFeatureProfiler

./: .gitignore  CHANGELOG.md  LICENSE  README.md  gene_profiles.csv  pyproject.toml
cli/: main_profiler.py
example/: cell_groups.csv  expression.csv  generate_example_input.py
src/scfeatureprofiler/: __init__.py  _core.py  _engine.py  _gene_profiler.py  _logging.py  _selection_hvg.py  _selection_marker.py  _stability.py  _utils.py  api.py  cli.py
src/scfeatureprofiler/cli/: __init__.py  query_tool.py
